[gd_scene load_steps=4 format=3 uid="uid://1lfieg5ah502"]

[ext_resource type="Script" path="res://LevelUpOptionItem/level_up_option_item.gd" id="1_16pmr"]
[ext_resource type="Texture2D" uid="uid://b7cvdywemeq0q" path="res://Textures/Items/Weapons/ice_spear.png" id="1_ct6n1"]
[ext_resource type="Theme" uid="uid://dqpxgqn16w41e" path="res://Theme/base.tres" id="3_ofwi8"]

[node name="LevelUpOptionItem" type="MarginContainer"]
offset_right = 200.0
offset_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/margin_bottom = 4
script = ExtResource("1_16pmr")

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
texture = ExtResource("1_ct6n1")
expand_mode = 2
stretch_mode = 4

[node name="LabelName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("3_ofwi8")
theme_override_font_sizes/font_size = 14
text = "name"

[node name="LabelLevel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 20)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ofwi8")
theme_override_font_sizes/font_size = 14
text = "level 11"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 10

[node name="LabelDes" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("3_ofwi8")
theme_override_font_sizes/font_size = 10
text = "this is dessss fdf fdf fdfdf dffd fdf fdfd fdf fdf fdfdf fdfd fdf  dfdf fdfd fdf fdf fdf fdf fdf"
autowrap_mode = 2

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
